fix Integer deprecated